--- a/Weather-App/templates/index.html
+++ b/Weather-App/templates/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Weather Definer 3000</title>
-  <link rel="icon" href="images/sunshine.png" type="image/x-icon">
-  <link rel="stylesheet" href="styles.css" id="CSS-source">
+  <link rel="icon" href="static/images/sunshine.png" type="image/x-icon">
+  <link rel="stylesheet" href="/static/styles.css" id="CSS-source">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="crossorigin=""></script>
@@ -12,7 +12,7 @@
 <body>
     <div id="header-container">
       <div id="weather-app-icon">
-        <img src="images/weather-forecast.png" alt="Weather App Icon">
+        <img src="static/images/weather-forecast.png" alt="Weather App Icon">
       </div>
       <div id="weather-app-title">
         <h1 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Weather Definer 3000</h1>
@@ -91,6 +91,6 @@
       </div>
     </div>
   </div>
-  <script src="scripts.js"></script>
+  <script src="/static/scripts.js"></script>
 </body>
 </html>
